<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="@string/default_mins_remind_before_due"
        android:entries="@array/pref_before_due_list_titles"
        android:entryValues="@array/pref_before_due_list_values"
        android:key="@string/prefs_before_due_interval_max_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_minutes_to_remind_before_due" />

    <ListPreference
        android:defaultValue="@string/default_mins_remind_at_due"
        android:entries="@array/pref_at_due_list_titles"
        android:entryValues="@array/pref_at_due_list_values"
        android:key="@string/prefs_at_due_interval_max_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_minutes_to_remind_at_due" />

    <ListPreference
        android:defaultValue="@string/default_mins_network_check"
        android:entries="@array/pref_network_check_interval_list_titles"
        android:entryValues="@array/pref_network_check_interval_list_values"
        android:key="@string/prefs_network_check_interval_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_network_check_interval_title" />

    <!--<SwitchPreference-->
        <!--android:defaultValue="@bool/default_do_remind_about_unfinished"-->
        <!--android:title="@string/pref_after_due_do_remind_title"-->
        <!--android:key="doRemindAboutUnfinishedTasks" />-->

</PreferenceScreen>
