<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.university.unicornslayer.todoistextension.ui.settings.fragments.GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.university.unicornslayer.todoistextension.ui.settings.fragments.NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:icon="@drawable/ic_baseline_swap_vert"
        android:title="@string/pref_header_token">
        <intent android:action=".ui.token_input.TokenInputActivity" />
    </header>

</preference-headers>
